--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "use-local-storage": "^2.2.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
